display + edit tasks
