# backend/app/api/routes/tasks.py
@@ -5,7 +5,14 @@ from fastapi import APIRouter, HTTPException
 
 from app.api.deps import CurrentUserDep, SessionDep
 from app.core import crud
-from app.core.models import Message, Task, TaskCreate, TaskPublic, TasksPublic
+from app.core.models import (
+    Message,
+    Task,
+    TaskCreate,
+    TaskPublic,
+    TasksPublic,
+    TaskUpdate,
+)
 
 router = APIRouter()
 
@@ -64,17 +71,51 @@ def create_task(
     return crud.create_task(session=session, task_in=task_in)
 
 
-@router.patch("/{id}", response_model=TaskPublic)
-def complete_task(
+@router.patch("/{task_id}", response_model=TaskPublic)
+def update_task(
     session: SessionDep,
     current_user: CurrentUserDep,
-    id: uuid.UUID,
+    task_id: uuid.UUID,
+    task_in: TaskUpdate,
 ) -> Any:
     """
-    Complete task.
+    Update task.
     """
 
-    task = crud.read_task_by_id(session=session, id=id)
+    task = crud.read_task_by_id(session=session, id=task_id)
+    if not task:
+        raise HTTPException(status_code=404, detail="Task not found")
+
+    if task.user_id != current_user.id:
+        if not current_user.is_admin:
+            raise HTTPException(
+                status_code=403,
+                detail="Not enough permissions to update another user's task",
+            )
+
+        db_list = crud.read_list_by_id(session=session, id=task.list_id)
+
+        if db_list.family_id != current_user.family_id:
+            raise HTTPException(
+                status_code=403,
+                detail="Not enough permissions to update someone else's family task.",
+            )
+
+    return crud.update_task(session=session, db_task=task, task_in=task_in)
+
+
+@router.patch("/{task_id}/status", response_model=TaskPublic)
+def update_task_status(
+    session: SessionDep,
+    current_user: CurrentUserDep,
+    task_id: uuid.UUID,
+    completed: bool,
+) -> Any:
+    """
+    Update task status.
+    """
+
+    task = crud.read_task_by_id(session=session, id=task_id)
     if not task:
         raise HTTPException(status_code=404, detail="Task not found")
 
@@ -84,18 +125,48 @@ def complete_task(
             detail="Not enough permissions to complete another user's task",
         )
 
-    return crud.complete_task(session=session, db_task=task)
+    return crud.update_task_status(session=session, db_task=task, completed=completed)
 
 
-@router.delete("/{id}", response_model=Message)
-def delete_task(
-    session: SessionDep, current_user: CurrentUserDep, id: uuid.UUID
+@router.delete("/{list_id}", response_model=Message)
+def clear_tasks(
+    session: SessionDep, current_user: CurrentUserDep, list_id: uuid.UUID
 ) -> Any:
     """
     Delete task
     """
 
-    task = session.get(Task, id)
+    db_list = crud.read_list_by_id(session=session, id=list_id)
+
+    if not db_list:
+        raise HTTPException(status_code=404, detail="List not found")
+
+    if db_list.family_id and current_user.family_id != db_list.family_id:
+        raise HTTPException(
+            status_code=403,
+            detail="Not enough permissions to clear another family's tasks",
+        )
+
+    if db_list.user_id and current_user.id != db_list.user_id:
+        raise HTTPException(
+            status_code=403,
+            detail="Not enough permissions to clear another users's tasks",
+        )
+
+    crud.clear_list_tasks(session=session, list_id=list_id)
+
+    return Message(message="Task deleted successfully")
+
+
+@router.delete("/{task_id}", response_model=Message)
+def delete_task(
+    session: SessionDep, current_user: CurrentUserDep, task_id: uuid.UUID
+) -> Any:
+    """
+    Delete task
+    """
+
+    task = session.get(Task, task_id)
 
     if not task:
         raise HTTPException(status_code=404, detail="Task not found")
